syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  // My custom method
  rpc MyMethod (MyRequest) returns (MyResponse);
}

message MyRequest {
	int32 id = 1;
	string value = 2;
}

message MyResponse {
	int32 id = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
